--- a/packages/app/src/styles/_extends.scss
+++ b/packages/app/src/styles/_extends.scss
@@ -8,7 +8,7 @@
   padding: 15px;
   text-align: center;
   text-transform: uppercase;
-  transition: .5s all ease;
+  transition: 0.5s all ease;
 }
 
 %buttton-primary {
