--- a/app-desktop/src/index.ejs
+++ b/app-desktop/src/index.ejs
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>One-For-All Boilerplate</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-  The app will go here...
+  <div id="app"></div>
 </body>
 </html>
